Add Drupal directories into .gitignore. Add mediamonks theme and module directories.

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,19 @@ npm-debug.log
 
 # Compiled styles
 /deploy/htdocs/version/src/inc/style/screen.css
+
+#Drupal public file path
+deploy/htdocs/assets
+
+#Binaire files are generated with composer
+deploy/bin
+
+#Ignore core and contrib files, use composer
+deploy/htdocs/core
+deploy/htdocs/modules/contrib
+deploy/htdocs/modules/mediamonks
+deploy/htdocs/themes/contrib
+deploy/htdocs/themes/mediamonks
+deploy/htdocs/library/contrib
+deploy/htdocs/profiles/contrib
+drush/contrib
