--- a/deploy/var/drupal-config/sync/node.type.page.yml
+++ b/deploy/var/drupal-config/sync/node.type.page.yml
@@ -1,7 +1,14 @@
 uuid: ecb967e3-ddcf-43b0-bc2d-d4d67a635a3d
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - menu_ui
+third_party_settings:
+  menu_ui:
+    available_menus:
+      - main
+    parent: 'main:standard.front_page'
 _core:
   default_config_hash: KuyA4NHPXcmKAjRtwa0vQc2ZcyrUJy6IlS2TAyMNRbc
 name: 'Basic page'
