--- a/deploy/var/drupal-config/sync/user.role.authenticated.yml
+++ b/deploy/var/drupal-config/sync/user.role.authenticated.yml
@@ -19,3 +19,5 @@ permissions:
   - 'search content'
   - 'use text format restricted_html'
   - 'use text format bold_html'
+  - 'restful get spectrum_rest_page_v1'
+  - 'restful get spectrum_rest_searchpages_v1'
