--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,5 @@ deploy/htdocs/themes/contrib
 deploy/htdocs/themes/mediamonks
 deploy/htdocs/library/contrib
 deploy/htdocs/profiles/contrib
+deploy/htdocs/sites/default/files
 drush/contrib
