--- a/deploy/var/drupal-config/sync/core.entity_view_display.node.show.teaser.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.node.show.teaser.yml
@@ -14,4 +14,9 @@ mode: teaser
 content:
   links:
     weight: 100
-hidden: {  }
+hidden:
+  field_broadcast_schedule: true
+  field_image: true
+  field_show_metric: true
+  field_tags: true
+  field_video_external: true
