--- a/deploy/var/drupal-config/sync/core.extension.yml
+++ b/deploy/var/drupal-config/sync/core.extension.yml
@@ -35,8 +35,8 @@ module:
   search_api: 0
   search_api_db: 0
   serialization: 0
-  shortcut: 0
   spectrum_rest: 0
+  sqlsrv: 0
   system: 0
   taxonomy: 0
   text: 0
