--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,9 @@
         "drupal/admin_toolbar": "1.18",
         "drupal/video_embed_field": "1.3",
         "drupal/field_group": "1.0-rc6",
-        "drupal/jquery_colorpicker": "1.0-rc2"
+        "drupal/jquery_colorpicker": "1.0-rc2",
+        "drupal/sqlsrv": "1.0-rc4",
+        "david/mssql": "dev-master"
     },
     "repositories": {
         "mediamonks-drupal-decoupled": {
@@ -77,6 +79,10 @@
         "composer": {
             "type": "composer",
             "url": "https://packagist.drupal-composer.org"
+        },
+        "phpmssql": {
+            "type": "git",
+            "url": "https://monkjason:3z5P0lWtNFpKtYWiTmbz53K6B0xd5l2dsEiaD3o2tJ6mMl8Op4R@gitlab.com/david-garcia-garcia/mssql.git"
         }
     },
     "minimum-stability": "dev",
@@ -94,10 +100,12 @@
             "MediaMonksDrupalProject\\composer\\DrupalScriptHandler::checkComposerVersion"
         ],
         "post-install-cmd": [
-            "MediaMonksDrupalProject\\composer\\DrupalScriptHandler::createRequiredFiles"
+            "MediaMonksDrupalProject\\composer\\DrupalScriptHandler::createRequiredFiles",
+            "MediaMonksDrupalProject\\composer\\DrupalScriptHandler::copySqlSrvDrivers"
         ],
         "post-update-cmd": [
-            "MediaMonksDrupalProject\\composer\\DrupalScriptHandler::createRequiredFiles"
+            "MediaMonksDrupalProject\\composer\\DrupalScriptHandler::createRequiredFiles",
+            "MediaMonksDrupalProject\\composer\\DrupalScriptHandler::copySqlSrvDrivers"
         ]
     },
     "extra": {
