--- a/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -9,6 +9,7 @@ dependencies:
     - paragraphs.paragraphs_type.blockaudiofragment
     - paragraphs.paragraphs_type.blockblogpost
     - paragraphs.paragraphs_type.blockbutton
+    - paragraphs.paragraphs_type.blockfiltercontent
     - paragraphs.paragraphs_type.blockheromain
     - paragraphs.paragraphs_type.blockherosecondary
     - paragraphs.paragraphs_type.blockherotertiary
@@ -66,18 +67,19 @@ settings:
       blockmapsecondary: blockmapsecondary
       blockmarketmap: blockmarketmap
       blocknetworkoverview: blocknetworkoverview
-      blockherotertiary: blockherotertiary
       blockpagenotfound: blockpagenotfound
+      blockherotertiary: blockherotertiary
       blockpathtopurchase: blockpathtopurchase
       blockprogrammodule: blockprogrammodule
       blockquote: blockquote
-      blockinfo: blockinfo
       blockquotesecondary: blockquotesecondary
+      blockinfo: blockinfo
       blocksmallheading: blocksmallheading
       blocksmallimage: blocksmallimage
       blocksmallinfo: blocksmallinfo
       blockstoryinfoimages: blockstoryinfoimages
       blocktext: blocktext
+      blockfiltercontent: blockfiltercontent
       blockpersonaselector: blockpersonaselector
     target_bundles_drag_drop:
       blockhowtoadvertise:
@@ -110,12 +112,12 @@ settings:
       link:
         weight: 13
         enabled: false
-      step:
-        weight: 15
-        enabled: false
       blockarticleteaser:
         enabled: true
         weight: 15
+      step:
+        weight: 15
+        enabled: false
       blockaudiofragment:
         enabled: true
         weight: 16
@@ -149,10 +151,10 @@ settings:
       blocknetworkoverview:
         enabled: true
         weight: 29
-      blockherotertiary:
+      blockpagenotfound:
         enabled: true
         weight: 30
-      blockpagenotfound:
+      blockherotertiary:
         enabled: true
         weight: 30
       blockpathtopurchase:
@@ -167,10 +169,10 @@ settings:
       blockquote:
         enabled: true
         weight: 35
-      blockinfo:
+      blockquotesecondary:
         enabled: true
         weight: 36
-      blockquotesecondary:
+      blockinfo:
         enabled: true
         weight: 36
       blocksmallheading:
@@ -182,12 +184,12 @@ settings:
       blocksmallimage:
         enabled: true
         weight: 38
-      blocksmallinfo:
-        enabled: true
-        weight: 39
       stat:
         weight: 39
         enabled: false
+      blocksmallinfo:
+        enabled: true
+        weight: 39
       statistic:
         weight: 40
         enabled: false
@@ -197,10 +199,16 @@ settings:
       blocktext:
         enabled: true
         weight: 42
+      blockfiltercontent:
+        enabled: true
+        weight: 48
       blockpersonaselector:
         enabled: true
         weight: 54
       stories:
         weight: 79
+        enabled: false
+      steppurchase:
+        weight: 84
         enabled: false
 field_type: entity_reference_revisions
