--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockmore.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockmore.default.yml
@@ -16,13 +16,12 @@ bundle: blockmore
 mode: default
 content:
   field_articles:
-    weight: 3
+    weight: 5
     label: above
     settings:
-      view_mode: default
-      link: ''
+      link: true
     third_party_settings: {  }
-    type: entity_reference_revisions_entity_view
+    type: entity_reference_label
   field_heading:
     weight: 1
     label: above
