--- a/deploy/var/drupal-config/sync/core.entity_form_display.node.article.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.node.article.default.yml
@@ -3,11 +3,14 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.article.field_category
     - field.field.node.article.field_content
+    - field.field.node.article.field_document_type
     - field.field.node.article.field_excerpt
     - field.field.node.article.field_image
+    - field.field.node.article.field_market
+    - field.field.node.article.field_platform
     - field.field.node.article.field_read_time
-    - field.field.node.article.field_tags
     - image.style.thumbnail
     - node.type.article
   module:
@@ -26,6 +29,14 @@ content:
     weight: 7
     settings: {  }
     third_party_settings: {  }
+  field_category:
+    weight: 26
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete_tags
   field_content:
     weight: 2
     settings:
@@ -33,6 +44,14 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
+  field_document_type:
+    weight: 27
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete_tags
   field_excerpt:
     weight: 1
     settings:
@@ -47,20 +66,28 @@ content:
       progress_indicator: throbber
       preview_image_style: thumbnail
     third_party_settings: {  }
+  field_market:
+    weight: 28
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete_tags
+  field_platform:
+    weight: 29
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete_tags
   field_read_time:
     weight: 5
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
-  field_tags:
-    type: entity_reference_autocomplete_tags
-    weight: 3
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
   path:
     type: path
     weight: 8
