--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockinfo.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockinfo.default.yml
@@ -7,7 +7,6 @@ dependencies:
     - field.field.paragraph.blockinfo.field_styles
     - paragraphs.paragraphs_type.blockinfo
   module:
-    - entity_reference_revisions
     - field_group
     - paragraphs
 third_party_settings:
@@ -31,12 +30,9 @@ mode: default
 content:
   field_block_info:
     weight: 2
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_revisions_autocomplete
+    type: options_select
   field_styles:
     weight: 1
     settings:
