--- a/deploy/var/drupal-config/sync/core.entity_view_display.node.article.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.node.article.default.yml
@@ -3,11 +3,14 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.article.field_category
     - field.field.node.article.field_content
+    - field.field.node.article.field_document_type
     - field.field.node.article.field_excerpt
     - field.field.node.article.field_image
+    - field.field.node.article.field_market
+    - field.field.node.article.field_platform
     - field.field.node.article.field_read_time
-    - field.field.node.article.field_tags
     - image.style.large
     - node.type.article
   module:
@@ -21,12 +24,26 @@ targetEntityType: node
 bundle: article
 mode: default
 content:
+  field_category:
+    weight: 104
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
   field_content:
     weight: 102
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
+  field_document_type:
+    weight: 105
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
   field_excerpt:
     weight: 101
     label: above
@@ -42,6 +59,20 @@ content:
       image_link: ''
     third_party_settings: {  }
     label: hidden
+  field_market:
+    weight: 106
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+  field_platform:
+    weight: 107
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
   field_read_time:
     weight: 103
     label: above
@@ -50,15 +81,7 @@ content:
       prefix_suffix: true
     third_party_settings: {  }
     type: number_integer
-  field_tags:
-    type: entity_reference_label
-    weight: 10
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
   links:
     weight: 100
 hidden:
   field_image: true
-  field_tags: true
