--- a/deploy/var/drupal-config/sync/core.entity_view_display.node.article.rss.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.node.article.rss.yml
@@ -4,8 +4,10 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.rss
+    - field.field.node.article.field_content
+    - field.field.node.article.field_excerpt
     - field.field.node.article.field_image
-    - field.field.node.article.field_tags
+    - field.field.node.article.field_read_time
     - node.type.article
   module:
     - user
@@ -23,4 +25,3 @@ hidden:
   field_excerpt: true
   field_image: true
   field_read_time: true
-  field_tags: true
