--- a/deploy/var/drupal-config/sync/core.entity_view_display.node.article.teaser.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.node.article.teaser.yml
@@ -4,8 +4,10 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.article.field_content
+    - field.field.node.article.field_excerpt
     - field.field.node.article.field_image
-    - field.field.node.article.field_tags
+    - field.field.node.article.field_read_time
     - image.style.medium
     - node.type.article
   module:
@@ -26,13 +28,6 @@ content:
       image_link: content
     third_party_settings: {  }
     label: hidden
-  field_tags:
-    type: entity_reference_label
-    weight: 10
-    settings:
-      link: true
-    third_party_settings: {  }
-    label: above
   links:
     weight: 100
 hidden:
@@ -40,4 +35,3 @@ hidden:
   field_excerpt: true
   field_image: true
   field_read_time: true
-  field_tags: true
