--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockarticleteaser.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockarticleteaser.default.yml
@@ -14,13 +14,12 @@ bundle: blockarticleteaser
 mode: default
 content:
   field_article:
-    type: entity_reference_revisions_entity_view
     weight: 1
     label: above
     settings:
-      view_mode: default
-      link: ''
+      link: true
     third_party_settings: {  }
+    type: entity_reference_label
   field_styles:
     weight: 0
     label: above
