--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockinfo.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockinfo.default.yml
@@ -17,10 +17,9 @@ content:
     weight: 1
     label: above
     settings:
-      view_mode: default
-      link: ''
+      link: true
     third_party_settings: {  }
-    type: entity_reference_revisions_entity_view
+    type: entity_reference_label
   field_styles:
     weight: 0
     label: above
