--- a/deploy/var/drupal-config/sync/field.storage.node.field_document_type.yml
+++ b/deploy/var/drupal-config/sync/field.storage.node.field_document_type.yml
@@ -1,19 +1,19 @@
-uuid: a4d846cc-4e8b-4b23-98b2-944a06a8001c
+uuid: e0356ebf-c4bc-4c34-a22b-1538d6389473
 langcode: en
 status: true
 dependencies:
   module:
     - node
-    - paragraphs
-id: paragraph.field_block_info
-field_name: field_block_info
-entity_type: paragraph
+    - taxonomy
+id: node.field_document_type
+field_name: field_document_type
+entity_type: node
 type: entity_reference
 settings:
-  target_type: node
+  target_type: taxonomy_term
 module: core
 locked: false
-cardinality: 1
+cardinality: -1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
