--- a/deploy/var/drupal-config/sync/user.role.anonymous.yml
+++ b/deploy/var/drupal-config/sync/user.role.anonymous.yml
@@ -15,3 +15,4 @@ permissions:
   4: 'search content'
   5: 'restful get spectrum_rest_page_v1'
   6: 'restful get spectrum_rest_searchpages_v1'
+  7: 'restful get spectrum_rest_searcharticles_v1'
