--- a/deploy/var/drupal-config/sync/user.role.authenticated.yml
+++ b/deploy/var/drupal-config/sync/user.role.authenticated.yml
@@ -21,3 +21,4 @@ permissions:
   - 'use text format bold_html'
   - 'restful get spectrum_rest_page_v1'
   - 'restful get spectrum_rest_searchpages_v1'
+  - 'restful get spectrum_rest_searcharticles_v1'
