--- a/deploy/var/drupal-config/sync/core.entity_view_display.node.block_info.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.node.block_info.default.yml
@@ -3,8 +3,12 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.block_info.field_category
     - field.field.node.block_info.field_content
+    - field.field.node.block_info.field_document_type
     - field.field.node.block_info.field_link
+    - field.field.node.block_info.field_market
+    - field.field.node.block_info.field_platform
     - node.type.block_info
   module:
     - entity_reference_revisions
@@ -15,12 +19,26 @@ targetEntityType: node
 bundle: block_info
 mode: default
 content:
+  field_category:
+    weight: 104
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
   field_content:
     weight: 103
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
+  field_document_type:
+    weight: 105
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
   field_link:
     type: entity_reference_revisions_entity_view
     weight: 102
@@ -29,6 +47,20 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
+  field_market:
+    weight: 106
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+  field_platform:
+    weight: 107
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
   links:
     weight: 100
 hidden: {  }
