--- a/deploy/var/drupal-config/sync/search_api.index.articles.yml
+++ b/deploy/var/drupal-config/sync/search_api.index.articles.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_category
-    - field.storage.node.field_document_type
     - field.storage.node.field_market
     - field.storage.node.field_platform
+    - field.storage.node.field_document_type
     - search_api.server.database
   module:
     - taxonomy
@@ -28,6 +28,13 @@ field_settings:
         'entity:node':
           article: default
           block_info: ''
+  node_grants:
+    label: 'Node access information'
+    property_path: search_api_node_grants
+    type: string
+    indexed_locked: true
+    type_locked: true
+    hidden: true
   category:
     label: Category
     datasource_id: 'entity:node'
@@ -36,16 +43,6 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_category
-      module:
-        - taxonomy
-  document_type:
-    label: 'Document type'
-    datasource_id: 'entity:node'
-    property_path: 'field_document_type:entity:name'
-    type: boolean
-    dependencies:
-      config:
-        - field.storage.node.field_document_type
       module:
         - taxonomy
   market:
@@ -68,12 +65,56 @@ field_settings:
         - field.storage.node.field_platform
       module:
         - taxonomy
+  status:
+    label: status
+    datasource_id: 'entity:node'
+    property_path: status
+    type: boolean
+    indexed_locked: true
+    type_locked: true
+  uid:
+    label: uid
+    datasource_id: 'entity:node'
+    property_path: uid
+    type: integer
+    indexed_locked: true
+    type_locked: true
+  document_type:
+    label: 'Document type'
+    datasource_id: 'entity:node'
+    property_path: 'field_document_type:entity:name'
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_document_type
+      module:
+        - taxonomy
 processor_settings:
+  content_access:
+    plugin_id: content_access
+    settings:
+      weights:
+        preprocess_query: -10
+  ignorecase:
+    plugin_id: ignorecase
+    settings:
+      fields:
+        - rendered_item
+        - category
+        - document_type
+        - market
+        - platform
+      weights:
+        preprocess_index: -10
+        preprocess_query: -10
   aggregated_field:
     plugin_id: aggregated_field
     settings: {  }
   rendered_item:
     plugin_id: rendered_item
+    settings: {  }
+  node_status:
+    plugin_id: node_status
     settings: {  }
   add_url:
     plugin_id: add_url
