changes for pres spectrum.

--- a/deploy/htdocs/api/mock/knowledge-center.json
+++ b/deploy/htdocs/api/mock/knowledge-center.json
@@ -10,7 +10,7 @@
 					"marginTop": 0,
 					"windowed": false,
 					"heading": "Knowledge center",
-					"paragraph": "Spectrum Reach develops measurable data infused marketing solutions to reach your best customers and grow your business.",
+					"paragraph": "Media trends are affecting your business. Here’s what you need to know.",
 					"link": {
 						"label": "Find out more",
 						"title": "Find out more",
